Fixing IT page on mobile

--- a/src/components/projectBox.css
+++ b/src/components/projectBox.css
@@ -64,6 +64,11 @@
     height:315px;
 }
 
+.projectMedia img{
+    width:80%;
+    height:45%;
+}
+
 @media only screen and (max-width: 960px) {
     .projectMedia iframe{
         width:80%;
