--- a/src/pages/it.css
+++ b/src/pages/it.css
@@ -23,6 +23,6 @@ grid-template-columns: 1fr 1fr;
 justify-content: center;
 align-items: center;
 margin:auto;
-width:20rem;
+width:0rem;
 }
 }
